# OpenGL_Engine_V1

./: CMakeLists.txt
ext/inc/glad/: glad.h
ext/src/: glad.c
inc/: engine.h  entity.h  memory.h  model.h  shader.h  texture.h  window.h
res/shaders/: fragment.glsl  vertex.glsl
src/: entity.c  main.c  memory.c  model.c  shader.c  texture.c  window.c
